--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ h1{
 .orange-color{
     color:orange;
 }
-section{
+.flexible-container{
     display: flex;
+    padding:50px ;
   
 }
 .half-width{
@@ -31,12 +32,19 @@ section{
     background-image: url(image/top-banner.png);
     background-repeat: no-repeat;
 }
-section{
-    height: 500px;
-    padding-bottom: 150px;
-}
+
+
 .dream-area{
     background-image: url(image/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-area{
+    background-image:url(image/exp-bg.png) ;
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.colour{
+    color: tomato;
 }
